<resources>
    <string name="app_name">UnitConvert</string>
    <string name="curruncy">curruncy</string>
    <string name="volume">volume</string>
    <string name="weight">weight</string>
    <string name="area">area</string>
    <string name="length">length</string>
    <string name="temperature">temperature</string>
    <string name="title_activity_area">area</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="clear">clear</string>
    <string name="history">history</string>
    <string name="save">save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_history">hide history</string>
    <string name="show_history">show history</string>
    <string name="clare_history">clare history</string>

</resources>
