<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Volume"
    android:background="@drawable/background2"
    tools:layout_editor_absoluteY="25dp"
    >

    <!--    the switch button-->
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:rowCount="1"
        android:layout_weight="8">
        <androidx.cardview.widget.CardView
            style="@style/CardView"
            android:id="@+id/volume_cardView_icon"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false"
            android:layout_marginTop="40dp"
            >
            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/volume" />
                <TextView
                    style="@style/TextView"
                    android:textColor="#171a09"
                    android:text="@string/volume"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>


    <TextView
        android:id="@+id/volume_textview_from"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="From"
        android:layout_marginTop="205dp"
        android:layout_marginLeft="15dp"
        tools:layout_editor_absoluteX="353dp"
        tools:layout_editor_absoluteY="104dp"
        style="@style/TextStyle"
        />

    <EditText
        android:id="@+id/volume_editText_from"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_below="@+id/volume_textview_from"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/volume_textview_from"
        android:inputType="number"
        style="@style/EditText"
        />


    <Spinner
        android:id="@+id/volume_spinner_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/volume_editText_from"
        android:layout_marginStart="6dp"
        android:layout_toEndOf="@+id/volume_editText_from"
        />

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/volume_spinner_from"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/volume_editText_from">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/updown"
            android:background="@android:color/transparent"
            android:onClick="switch_unit"/>

    </LinearLayout>



    <TextView
        android:id="@+id/volume_textView_to"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="To"
        android:layout_alignTop="@+id/volume_textview_from"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="15dp"
        tools:layout_editor_absoluteX="353dp"
        tools:layout_editor_absoluteY="104dp"
        style="@style/TextStyle"
        />

    <EditText
        android:id="@+id/volume_editText_to"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_below="@+id/volume_textView_to"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/volume_textView_to"
        style="@style/EditText"
        android:inputType="none"
        android:editable="false"
        />

    <Spinner
        android:id="@+id/sp_volume_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/volume_editText_to"
        android:layout_marginStart="6dp"
        android:layout_toEndOf="@+id/volume_editText_to"
        android:layout_marginLeft="50dp"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/volume_button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/volume_editText_from"
        android:layout_alignBottom="@+id/volume_editText_from"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="-94dp"
        android:text="@string/clear"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textColor="#171a09"
        app:backgroundTint="#b5842f"
        android:onClick="clear_input"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/volume_button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/volume_editText_from"
        android:layout_alignBottom="@+id/volume_editText_from"
        android:layout_marginStart="-20dp"
        android:layout_marginBottom="-270dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textColor="#171a09"
        app:backgroundTint="#b5842f"
        android:onClick="save_result"/>

    <ToggleButton
        android:id="@+id/volume_toggleButton_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/volume_editText_from"
        android:layout_alignBottom="@+id/volume_editText_from"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="-270dp"
        android:text="@string/history"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textColor="#171a09"
        android:background="#b5842f"
        android:textOn="@string/hide_history"
        android:textOff="@string/show_history" />
    <LinearLayout
        android:id="@+id/volume_fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/volume_toggleButton_history"
        android:layout_marginTop="60dp"
        android:visibility="invisible">
        <androidx.fragment.app.FragmentContainerView
            android:name="com.hanyong.unitconvert2.history_fragment"
            android:id="@+id/volume_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>

</RelativeLayout>